# AI_Triage_System

./: Dockerfile  LICENSE  README.md  SPACES_README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
