[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-triage-system"
version = "0.1.0"
description = "AI Triage System for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "gradio",
    "pydantic",
]

[project.scripts]
server = "server:app"
